# ecology-plugins

./: .gitignore  README.md  README_CN.md
.github/workflows/: oceanbase-haystack-ci.yml  publish-oceanbase-cli-pypi.yml  publish-oceanbase-haystack-pypi.yml  release.yml  workflow.yml
fluent-plugin-oceanbase-logs/: .env.example  .gitignore  README.md  Rakefile  fluent-plugin-oceanbase-logs.gemspec
fluent-plugin-oceanbase-logs/example/: fluentd.conf
fluent-plugin-oceanbase-logs/example/oceanbase2loki-docker/: docker-compose.yml  fluentd-to-loki.conf
fluent-plugin-oceanbase-logs/test/: curl_test_oceanbase_api.sh
fluent-plugin-oceanbase-logs/test/plugin/: test_in_oceanbase_logs.rb
oceanbase-cli/: README.md  pyproject.toml
oceanbase-cli/docs/: operations-guide-zh.md
oceanbase-cli/src/oceanbase_cli/: __init__.py  audit.py  clickutil.py  config.py  config_commands.py  connection_pool.py  constants.py  credentials_store.py  dsn.py  executor.py  main.py  output.py  paths.py  policy.py  rules_commands.py  schema_cmd.py  sql_classification.py  sql_cmd.py  status_cmd.py
oceanbase-cli/tests/: test_connection_pool.py  test_demo_obcli_and_skill.py  test_dsn.py  test_policy_rules.py
oceanbase-haystack/: .gitignore  Makefile  README.md  pyproject.toml
oceanbase-haystack/src/oceanbase_haystack/: __init__.py  document_store.py  filters.py  oceanbase_embedding_retriever.py
oceanbase-haystack/src/oceanbase_haystack/utils/: constant.py
oceanbase-haystack/tests/: __init__.py  conftest.py  constants.py  test_document_store_unit.py  test_filters.py  test_oceanbase_integration.py  test_retrievers.py
oceanbase-nextjs-vercel-demo/: .env.example  .gitignore  README.md  package-lock.json  package.json  vercel.json
oceanbase-nextjs-vercel-demo/app/: globals.css  layout.tsx  page.tsx
oceanbase-nextjs-vercel-demo/app/api/courses/: route.ts
oceanbase-nextjs-vercel-demo/app/api/courses/[id]/: route.ts
oceanbase-nextjs-vercel-demo/app/api/courses/[id]/capacity/: route.ts
oceanbase-nextjs-vercel-demo/app/api/courses/[id]/reviews/: route.ts
oceanbase-nextjs-vercel-demo/app/api/reviews/[id]/: route.ts
skills/oceanbase-cli/: SKILL.md
